# permutate

./: .buildinfo  .gitignore  CNAME  Dockerfile  README.md  genindex.html  index.html  introduction.html  objects.inv  pyproject.toml  quickstart.html  request.html  runner.py  search.html  searchindex.js  start_api_server.py
.doctrees/: environment.pickle  index.doctree  introduction.doctree  quickstart.doctree  request.doctree
.doctrees/apis/: generate_test_cases.doctree  get_permutations.doctree  index.doctree  interactive_run.doctree  start_a_batch_job.doctree  start_a_batch_job_ws.doctree
.github/workflows/: doc_publish.yml  release.yml
_sources/: quickstart.rst
_sources/apis/: generate_test_cases.rst  get_permutations.rst  index.rst  start_a_batch_job.rst  start_a_batch_job_ws.rst
apis/: generate_test_cases.html  get_permutations.html  index.html  interactive_run.html  start_a_batch_job.html  start_a_batch_job_ws.html
docs/: sample_result.html  sample_result_details.csv  sample_result_summary.csv
docs/source/: conf.py  index.rst  introduction.rst  quickstart.rst  request.rst  result.rst
docs/source/apis/: index.rst  interactive_run.rst
permutate/: __init__.py  __main__.py  generate_permutations.py  generate_test_cases.py  job_request_schema.py  job_response_schema.py  logger.py  main.py  plugin_operation_params.py  runner.py  singleton.py
permutate/api/: __init__.py  auth.py  cases.py  echo.py  generate_permutations.py  http_error.py  job.py  permutations.py  plugin_operation_params.py  test_case.py  ws_job.py
permutate/templates/: job_result_template.html  llm_permutations.json  tool_selector_permutations.json
tests/: test_permutate.py
tests/files/: plugin_test.yaml
tests/unit_tests/: test_plugin_operation_params.py
