[tool.poetry]
name = "permutate"
version = "0.0.10"
description = "Testing framework for LLM Plugins"
authors = ["shrikant <shrikant.pm14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.29.0"
pydantic = "^1.10.8"
pydantic-yaml = "^0.11.2"
tqdm = "^4.65.0"
pyyaml = "^6.0"
typer = { extras = ["all"], version = "^0.9.0" }
jinja2 = "^3.1.2"
fastapi = "^0.95.2"
openplugin = "^0.0.20"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.docs.dependencies]
sphinx = "6.2.1"
toml = "^0.10.2"
sphinx-tabs = "^3.4.1"
sphinx-copybutton = "^0.5.2"
sphinx-book-theme = "^1.0.1"


[tool.poetry.group.test.dependencies]
poethepoet = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
permutate = "permutate.main:app"

[tool.poe.tasks]
build_docs = "sphinx-build docs/source docs/build"
