[tool.poetry]
name = "permutate"
version = "0.0.10"
description = "Testing framework for LLM Plugins"
authors = ["shrikant <shrikant.pm14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.29.0"
pydantic = "^1.10.8"
pydantic-yaml = "^0.11.2"
tqdm = "^4.65.0"
pyyaml = "^6.0"
typer = { extras = ["all"], version = "^0.9.0" }
jinja2 = "^3.1.2"
fastapi = "^0.95.2"
openplugin = "0.0.21"
websockets = "11.0.1"
boto3 = "^1.28.43"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.5.1"
poethepoet = "^0.23.0"
black = "^23.9.1"
ruff = "^0.0.291"
pytest-cov = "^4.1.0"


[tool.poetry.group.docs.dependencies]
sphinx = "6.2.1"
toml = "^0.10.2"
sphinx-tabs = "^3.4.1"
sphinx-copybutton = "^0.5.2"
sphinx-book-theme = "^1.0.1"


[tool.poetry.group.types.dependencies]
types-toml = "^0.10.8.7"
types-requests = "^2.31.0.6"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]

fixable = ["ALL"]

# Same as Black.
line-length = 88

[tool.mypy]
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
warn_unused_ignores = "False"


[tool.coverage.run]
omit = [
    "tests/*",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
permutate = "permutate.main:app"

[tool.poe.tasks]
build_docs = "sphinx-build docs/source docs/build"
black = "black"
ruff = "ruff"
pytest.cmd = "py.test --durations=5 -W error::RuntimeWarning --cov --cov-config=.coveragerc --cov-report xml --cov-report term-missing:skip-covered"
mypy = "mypy . --pretty --show-error-codes"
fix = { shell = "poe black . && poe ruff --fix ." }
test = { shell = "poe black . --check --diff && poe ruff . && poe pytest && poe mypy" }
